--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.2.15",
+    "next-intl": "^3.23.2",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
